--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         </div>
                     </div>
                 </div>
-                <div  class="show-area container">
+                <div  class="show-area container mt-5">
                     <div class="transtion-area text-white text-capitalize">
                         <div class="row">
                             <div class="col-4 ">
